code-viewer: fix font sizes in <input>s
They were way too large for some reason...

--- a/src/style.less
+++ b/src/style.less
@@ -32,4 +32,9 @@ footer {
             border-bottom-right-radius: inherit;
         }
     }
+
+    .input-group,
+    input {
+        font-size: 1em;
+    }
 }
